<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_close_filter"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/action_apply"
        app:backgroundTint="@color/colorAccent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_title_filter"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_close_filter"
        android:layout_alignTop="@+id/btn_close_filter"
        android:layout_toLeftOf="@+id/btn_close_filter"
        android:layout_toStartOf="@+id/btn_close_filter"
        android:gravity="center_vertical"
        android:text="@string/menu_search_filter" />

    <RadioGroup
        android:id="@+id/rg_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_filter"
        android:layout_marginTop="@dimen/space_between_views"
        android:checkedButton="@id/rb_filter_no">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_filter_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_search_none"
            app:buttonTint="@color/colorAccent" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_filter_by_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_search_year"
            app:buttonTint="@color/colorAccent" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_filter_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_filter"
        android:layout_marginTop="@dimen/space_between_views"
        android:enabled="false"
        android:hint="@string/filter_input_year"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1" />

</RelativeLayout>
