<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_close_h_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_close" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_between_views" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:gravity="center"
        android:text="@string/indicator_h_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_between_views" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_h_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:text="@string/input_h_content_accept" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_between_views" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept_h_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_ok" />

</LinearLayout>