<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_search_result_info_photo"
            android:layout_width="match_parent"
            android:layout_height="196dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_search_result_info_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_search_result_info_photo"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/space_between_views"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/space_between_views"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/app_name"
            android:textIsSelectable="true" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_search_result_info_close"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_search_result_info_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/space_between_views"
            android:layout_marginRight="@dimen/space_between_views"
            android:contentDescription="@string/action_close"
            app:backgroundTint="#80000000"
            app:srcCompat="@drawable/ic_close"
            app:tint="@android:color/white" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_search_result_info_share"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_search_result_info_title"
            android:layout_marginEnd="@dimen/space_between_views"
            android:layout_marginRight="@dimen/space_between_views"
            android:contentDescription="@string/action_share"
            android:tint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/space_between_views"
            app:srcCompat="@drawable/ic_share" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search_result_info_video"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_search_result_info_share"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_toEndOf="@+id/btn_search_result_info_share"
            android:layout_toRightOf="@+id/btn_search_result_info_share"
            android:text="@string/action_watch_video_sample"
            app:cornerRadius="8dp" />


    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>