<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarStyle"
            app:elevation="@dimen/design_appbar_elevation">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ToolbarPopupStyle"
                app:title="@string/app_name" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/layout_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <android.support.percent.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_between_views"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_image"
                        style="@style/ButtonMainStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/input_source_image"
                        app:layout_widthPercent="30%" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_url"
                        style="@style/ButtonMainStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:text="@string/input_source_url"
                        app:layout_widthPercent="30%" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_video"
                        style="@style/ButtonMainStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"
                        android:text="@string/input_source_video"
                        app:layout_widthPercent="30%" />
                </android.support.percent.PercentRelativeLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <com.maddog05.maddogutilities.view.SquareImageView
                        android:id="@+id/iv_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_photo" />

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/layout_main_container"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_search"
            app:useCompatPadding="true" />

        <LinearLayout
            android:id="@+id/bottom_search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clipToPadding="true"
            app:elevation="@dimen/design_bottom_sheet_modal_elevation"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <include layout="@layout/content_search_result" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_background"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_progress_status"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_views"
                android:text="@string/app_name"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_main"
        app:menu="@menu/menu_drawer_main" />
</android.support.v4.widget.DrawerLayout>
